added development preview

--- a/energy-modelling.conf
+++ b/energy-modelling.conf
@@ -21,3 +21,15 @@
     ErrorLog /var/log/apache2/error.log
     CustomLog /var/log/apache2/access.log combined
 </VirtualHost>
+
+<VirtualHost *:443>
+	ServerName dev.energy.manavmahan.de
+    ServerAdmin manav.mahan.singh@live.in
+
+    ProxyPreserveHost On
+    ProxyPass / http://localhost:5100/
+    ProxyPassReverse / http://localhost:5100/
+
+    ErrorLog /var/log/apache2/error.log
+    CustomLog /var/log/apache2/access.log combined
+</VirtualHost>
