--- a/energy-modelling.conf
+++ b/energy-modelling.conf
@@ -15,6 +15,7 @@
     ServerAdmin manav.mahan.singh@live.in
 
     ProxyPreserveHost On
+    ProxyPassMatch ^/(_next/webpack-hmr)$  ws://localhost:5200/$1
     ProxyPass / http://localhost:5200/
     ProxyPassReverse / http://localhost:5200/
 
@@ -27,6 +28,7 @@
     ServerAdmin manav.mahan.singh@live.in
 
     ProxyPreserveHost On
+    ProxyPassMatch ^/(_next/webpack-hmr)$  ws://localhost:5100/$1
     ProxyPass / http://localhost:5100/
     ProxyPassReverse / http://localhost:5100/
 
